--- a/CiklumTestXamarin/CiklumTestXamarin/Views/MainPage.xaml
+++ b/CiklumTestXamarin/CiklumTestXamarin/Views/MainPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CiklumTestXamarin.Views.MainPage">
+  <StackLayout Padding="0,20,0,0">
+    <Label Text="{Binding UserName}" />
     <Label Text="{Binding Name}" />
     <Label Text="{Binding LastName}" />
+    <Label Text="{Binding Email}" />
     <Button Text="Get User" Command="{Binding GetUserCommand}" />
+  </StackLayout>
 </ContentPage>
